# sonarlog_pipeline

./: CMakeLists.txt
examples/: test_anisotropic_diffusion.cpp  test_detection.cpp  test_detection1.cpp  test_detection2.cpp  test_insonification_pattern.cpp  test_line.cpp  test_line_loop.cpp  test_mask.cpp  test_pipeline_detection_additive.cpp  test_pipeline_detection_final.cpp  test_pipeline_detection_gazebo.cpp  test_pipeline_detection_live.cpp  test_pipeline_detection_live_debug.cpp  test_ransac_fit_line.cpp  test_symetric.cpp  video.cpp
examples/backup/: test_anisotropic_diffusion.cpp  test_detection3.cpp  test_pipeline_detection1.cpp  test_pipeline_detection2.cpp  test_pipeline_detection3.cpp  test_pipeline_detection4.cpp  test_pipeline_detection_5.cpp  test_pipeline_detection_final_20170409.cpp  test_pipeline_detection_final_20170412.cpp  test_pipeline_detection_final_20170413.cpp  test_pipeline_detection_final_20170417.1.cpp  test_pipeline_detection_final_20170417.2.cpp  test_pipeline_detection_final_20170417.3.cpp  test_pipeline_detection_final_20170417.cpp  test_pipeline_detection_final_20170418.cpp  test_pipeline_detection_final_20170419.2.cpp  test_pipeline_detection_final_20170419.cpp
scripts/: example.sh  example.sh.in  example0.sh.in  example2.sh.in  logfix.rb
src/: Application.cpp  Application.hpp  ArgumentParser.cpp  ArgumentParser.hpp  main.cpp
test/: test_ArgumentParser.cpp
